--- a/style.css
+++ b/style.css
@@ -60,6 +60,10 @@ body {
 	padding: 20px 0;
 }
 
+.burg {
+	display: none;
+}
+
 .header_nav {
 	display: flex;
 	align-items: center;
@@ -799,12 +803,125 @@ body {
 }
 
 @media (max-width: 992px) {
+
+	#body.lock {
+		overflow: hidden;
+	}
 	
 	.container {
 		width: 768px;
 	}
 
+	.burg {
+		display: inline-block;
+		position: relative;
+		width: 30px;
+		height: 20px;
+		left: 5%;
+		z-index: 3;
+		background: transparent;
+		border: none;
+		transition: all 0.7s ease;
+	}
+
+	.burg::before {
+		content: '';
+		background-color: #A259FF;
+		position: absolute;
+		width: 100%;
+		height: 2px;
+		left: 0;
+		transition: all 0.3s ease;
+	}
+
+	.burg span {
+		position: absolute;
+		background-color: #A259FF;
+		left: 0;
+		width: 75%;
+		height: 2px;
+		top: 9px;
+		transition: all 0.3s ease;
+	}
+
+	.burg::after {
+		content: '';
+		background-color: #A259FF;
+		position: absolute;
+		width: 50%;
+		height: 2px;
+		left: 0;
+		transition: all 0.3s ease;
+	}
+
+	.burg::before {
+		top: 0;
+	}
+
+	.burg::after {
+		bottom: 0;
+	}
+
+	.burg.visible::before{
+		transform: rotate(45deg);
+		top: 9px;
+		width: 100%;
+		background-color: #A259FF;
+	}
+
+	.burg.visible::after{
+		transform: rotate(-45deg);
+		bottom: 9px;
+		width: 100%;
+		background: #A259FF;
+	}
+
+	.burg.visible span {
+		transform: scale(0);
+	}
+
 	.header_nav {
+		display: block;
+		position: fixed;
+		top: 65px;
+		left: -1000%;
+		width: 100%;
+		height: 100%;
+		transition: all 0.3s ease;
+		text-align: center;
+		background-color: #3B3B3B;
+		z-index: 3;
+	}
+
+	.header_nav.visible {
+		left: 0;
+	}
+
+	.header_nav .header_logo {
+		display: inline-flex;
+		margin-top: 25px;
+	}
+
+	.header_ul {
+		display: block;
+	}
+
+	.header_ul li {
+		margin: 50px 0px 0 0;
+	}
+
+	.header_ul li + li {
+		margin-left: 0;
+	}
+
+	.header_ul li > a {
+		color: #FFFFFF;
+		text-decoration: none;
+		font-weight: 600;
+		font-size: 32px;
+	}
+
+	.none_btn_media {
 		display: none;
 	}
 
@@ -1232,8 +1349,117 @@ body {
 	.container {
 		width: 100%;
 	}
+	
+	.burg {
+		display: inline-block;
+		position: relative;
+		width: 30px;
+		height: 20px;
+		left: 5%;
+		z-index: 3;
+		background: transparent;
+		border: none;
+		transition: all 0.7s ease;
+	}
+
+	.burg::before {
+		content: '';
+		background-color: #A259FF;
+		position: absolute;
+		width: 100%;
+		height: 2px;
+		left: 0;
+		transition: all 0.3s ease;
+	}
+
+	.burg span {
+		position: absolute;
+		background-color: #A259FF;
+		left: 0;
+		width: 75%;
+		height: 2px;
+		top: 9px;
+		transition: all 0.3s ease;
+	}
+
+	.burg::after {
+		content: '';
+		background-color: #A259FF;
+		position: absolute;
+		width: 50%;
+		height: 2px;
+		left: 0;
+		transition: all 0.3s ease;
+	}
+
+	.burg::before {
+		top: 0;
+	}
+
+	.burg::after {
+		bottom: 0;
+	}
+
+	.burg.visible::before{
+		transform: rotate(45deg);
+		top: 9px;
+		width: 100%;
+		background-color: #A259FF;
+	}
+
+	.burg.visible::after{
+		transform: rotate(-45deg);
+		bottom: 9px;
+		width: 100%;
+		background: #A259FF;
+	}
+
+	.burg.visible span {
+		transform: scale(0);
+	}
 
 	.header_nav {
+		display: block;
+		position: fixed;
+		top: 65px;
+		left: -1000%;
+		width: 100%;
+		height: 100%;
+		transition: all 0.3s ease;
+		text-align: center;
+		background-color: #3B3B3B;
+		z-index: 3;
+	}
+
+	.header_nav.visible {
+		left: 0;
+	}
+
+	.header_nav .header_logo {
+		display: inline-flex;
+		margin-top: 25px;
+	}
+
+	.header_ul {
+		display: block;
+	}
+
+	.header_ul li {
+		margin: 50px 0px 0 0;
+	}
+
+	.header_ul li + li {
+		margin-left: 0;
+	}
+
+	.header_ul li > a {
+		color: #FFFFFF;
+		text-decoration: none;
+		font-weight: 600;
+		font-size: 32px;
+	}
+
+	.none_btn_media {
 		display: none;
 	}
 
